QPageSize: remove redundant operator== declaration

Amends a45a3b1ece490bcae5cccd858dbe11408a19bee0, which added the hidden
friend as an inline function, without removing the already existing
declaration. Since that declaration was exported, keep it in the ABI
via Q_REMOVED_API, and only remove it from the API.

Fixes: QTBUG-115583
Change-Id: I169b565ed02168248f96c1379f537b90b4ea481c
Reviewed-by: Marc Mutz <marc.mutz@qt.io>
(cherry picked from commit c4086d7b7a3b5a06a2faaaf26e2a9f9d6b2918c3)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>